# AutoDoc

./: 10_SE.cpp  10_diagPresc.cpp  11_diagPresc.cpp  12_informesMed.cpp  13_citasProgramadas.cpp  1_estructuras.h  1_principal.cpp  2_login.cpp  2_menuPrincipal.cpp  3_estructuras.h  3_login.cpp  4_gotoxy.h  4_pacientes.cpp  5_citasProgramadas.cpp  5_menu.cpp  6_UT.cpp  6_paciente.cpp  7_UP.cpp  7_diagPresc.cpp  8_SE.cpp  8_UT.cpp  8_informesMed  9_UM.cpp  CMakeLists.txt  README.md  SE.cpp  UM.cpp  UP.cpp  a.cpp  busquedaJayana.cpp  estructuras.h  gotoxy.h  login.cpp  menu.cpp  paciente.cpp  vcpkg_rf.txt
output/: 10_SE  13_citasProgramadas  6_paciente  7_UP  7_diagPresc  8_UT  9_UM  UM  UP  busquedaJayana  citasProgramadas.txt  diagnosticos.txt  login  menu  paciente  pacientes.txt  prescripciones.txt  ultrasonidoPelvico.txt  ultrasonidoTransvaginal.txt
output/10_SE.dSYM/Contents/: Info.plist
output/10_SE.dSYM/Contents/Resources/DWARF/: 10_SE
output/13_citasProgramadas.dSYM/Contents/: Info.plist
output/13_citasProgramadas.dSYM/Contents/Resources/DWARF/: 13_citasProgramadas
output/6_paciente.dSYM/Contents/: Info.plist
output/6_paciente.dSYM/Contents/Resources/DWARF/: 6_paciente
output/7_UP.dSYM/Contents/: Info.plist
output/7_diagPresc.dSYM/Contents/: Info.plist
output/8_UT.dSYM/Contents/: Info.plist
output/9_UM.dSYM/Contents/: Info.plist
output/UM.dSYM/Contents/: Info.plist
output/UM.dSYM/Contents/Resources/DWARF/: UM
output/UP.dSYM/Contents/: Info.plist
output/busquedaJayana.dSYM/Contents/: Info.plist
output/paciente.dSYM/Contents/: Info.plist
(+22 files in other folders)
